<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="menu_remove">Remove</string>
    <string name="content_open_popup">Open Popup Menu</string>
    <string name="edit">edit</string>
    <string name="add">Add</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="ble_not_supported">BLE is not supported</string>

    <string name="unable_to_obtain_a_BluetoothAdapter">Unable to obtain a Bluetooth Adapter</string>

    <string name="bluetooth_adapter_is_turned_off">Bluetooth Adapter is turned off.</string>

    <string name="unknown_device">Unknown device</string>
    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <!---->
    <!--"Version" = "Версия";-->
    <string name="version">Version</string>

    <!--/* Initial view strings */-->
    <!--"App title" = "Домашний диагностический центр HOME-DC";-->
    <string name="app_title">App title</string>

    <string name="titleTHERMOMETER_RELSIB">THERMOMETER RELSIB</string>
    <!-- ООО НПК Рэлсиб-->
    <string name="sNPK_Relsib">RELSIB, LLC</string>
    <!--"Thermometer" = "Термометер";-->
    <string name="title_Thermometer">Thermometer</string>
    <string name="sThermometer">Thermometer</string>

    <!--"IDENTIFICATION" = "ИДЕНТИФИКАЦИЯ";-->
    <string name="sIDENTIFICATION">IDENTIFICATION</string>
    <!--"Name" = "Имя";-->
    <string name="sName">Name</string>
    <string name="sEnterName">Enter name</string>
    <!--"Sensors" = "Сенсоры";-->
    <string name="sSensors">Sensors</string>
    <!--"Marker" = "Маркер";-->
    <string name="sMarker">Marker</string>
    <!--"THERMOMETER" = "ТЕРМОМЕТЕР";-->
    <string name="sTHERMOMETER">THERMOMETER</string>
    <!--"Temperature" = "Температура";-->
    <string name="sTemperature">Temperature</string>

    <!--"Measuring" = "Измерение";-->
    <string name="sMeasuring">Measuring</string>

    <!--/* Temperature monitor settings strings */-->
    <!--"Universal" = "Универсальный";-->
    <string name="sUniversal">Universal</string>
    <!--"Medical" = "Медицинский";-->
    <string name="sMedical">Medical</string>
    <!--"Measuring mode" = "Режим измерения";-->
    <string name="sMeasuringMode">Measuring mode</string>
    <!--"MEASURING IS COMPLETE" = "ИЗМЕРЕНИЕ ЗАКОНЧЕНО";-->
    <string name="sMEASURING_IS_COMPLETE">MEASURING IS COMPLETE</string>
    <!--/* Threshold settings strings */-->
    <!--"Enabled" = "Включен";-->
    <string name="sEnabled">Enabled</string>
    <!--"Value" = "Значение";-->
    <string name="sValue">Value</string>
    <!--"Melody" = "Мелодия";-->
    <string name="sMelody">Melody</string>
    <!--"Vibration" = "Вибрация";-->
    <string name="sVibration">Vibration</string>


    <!--"NOTIFICATION" = "ОПОВЕЩЕНИЕ";-->
    <string name="sNOTIFICATION">NOTIFICATION</string>
    <string name="sNotification">Notification</string>
    <!--"Temperature greater than" = "Температура выше";-->
    <string name="sTemperatureGreaterThan">Temperature greater than</string>
    <!--"Temperature less than" = "Температура ниже";-->
    <string name="sTemperatureLessThan">Temperature less than</string>
    <!--"Temperature measuring" = "Измерение температуры";-->
    <string name="sTemperatureMeasuring">Temperature measuring</string>

    <!--"DESIGN" = "ОФОРМЛЕНИЕ";-->
    <string name="sDESIGN">DESIGN</string>
    <!--"Background" = "Фон";-->
    <string name="sBackground">Background</string>

    <!--/* Temperature monitor strings */-->
    <!--"Current" = "Текущая";-->
    <string name="sCurrent">current</string>
    <!--"Maximum" = "Максимальная";-->
    <string name="sMaximum">maximum</string>
    <!--"Minimum" = "Минимальная";-->
    <string name="sMinimum">minimum</string>
    <!--"Predicted" = "Прогнозируемая";-->
    <string name="sPredicted">predicted</string>

    <!--"Time, s" = "Время, с";-->
    <string name="sTime">Time</string>

    <!--"Cancel" = "Отменить";-->
    <string name="sCancel">Cancel</string>
    <!--"Accept" = "Принять";-->
    <string name="sAccept">Accept</string>
    <!--"Clear" = "Очистить";-->
    <string name="sClear">Clear</string>
    <!--"Edit" = "Изменить";-->
    <string name="sEdit">Edit</string>
    <!--"Done" = "Готово";-->
    <string name="sDone">Done</string>
    <!--"Delete" = "Удалить";-->
    <string name="sDelete">Delete</string>
    <!--"Disconnect" = "Отключить";-->
    <string name="sDisconnect">Disconnect</string>
    <!--"Discon" = "Откл";-->
    <string name="sDiscon">Discon</string>
    <!--"Reset" = "Сброс";-->
    <string name="sReset">Reset</string>
    <!--Level= уровень-->
    <string name="sLevel">Level</string>
    <!--Enter the number= введите число-->
    <string name="sEnterTheNumber">Enter the number</string>

    <!--/* Sensor's status */-->
    <!--"Unavailable" = "Недоступен";-->
    <string name="sUnavailable">Unavailable</string>
    <!--"Discover" = "Поиск";-->
    <string name="sDiscover">Discover</string>
    <!--"Disconnected" = "Не подключен";-->
    <string name="sDisconnected">Disconnected</string>
    <!--"Connecting..." = "Подключение...";-->
    <string name="sConnecting">Connecting</string>
    <!--"Connected" = "Подключен";-->
    <string name="sConnected">Connected</string>
    <!--"Measurement time" = "Время измерения";-->
    <string name="sMeasurementTime">Measurement time</string>

    <!--"Discover" = "Поиск";-->
    <!--"INFORMATION" = "ИНФОРМАЦИЯ";-->
    <string name="sINFORMATION">INFORMATION</string>
    <!--"Model number" = "Номер модели";-->
    <string name="sModelNumber">Model number</string>
    <!--"Serial number" = "Серийный номер";-->
    <string name="sSerialNumber">Serial number</string>
    <!--"Firmware revision" = "Версия прошивки";-->
    <string name="sFirmwareRevision">Firmware revision</string>
    <!--"Hardware revision" = "Аппаратная версия";-->
    <string name="sHardwareRevision">Hardware revision</string>
    <!--"Software revision" = "Версия ПО";-->
    <string name="sSoftwareRevision">Software revision</string>
    <!--"Manufacturer name" = "Производитель";-->
    <string name="sManufacturerName">Manufacturer Name</string>

    //2017-01-17 -----------------------------

    <!--/* Notifications */-->
    <!--"Top threshold has been reached" = "Достигнут верхний порог";-->
    <!--"Bottom threshold has been reached" = "Достигнут нижний порог";-->
    <!--"Measuring finished" = "Измерение завершено";-->

    <!--/* Image picker controller strings */-->
    <!--"Color" = "Цвет";-->
    <!--"Picture" = "Изображение";-->
    <!--"iPhone collection" = "Коллекция iPhone";-->
    <!--"Camera" = "Камера";-->

    <!--/* Ringtone picker controller strings */-->
    <!--"ALERTS" = "ЗВУКИ ОПОВЕЩЕНИЯ";-->
    <!--"MEDIA LIBRARY" = "МЕДИАТЕКА";-->

    <!--"Intruder alert" = "Нарушитель";-->
    <!--"Message alert" = "Тревожное сообщение";-->
    <!--"Red alert" = "Красная тревога";-->
    <!--"Siren alert" = "Сирена";-->

    <!--/* Views titles */-->

    <!--"History" = "История";-->

    <!--/* Navigation buttons names */-->
    <!--/* Temperature controller strings */-->
    <!--"Monitors" = "Мониторы";-->

    <!--/* Sensors list controller */-->
    <!--"Add sensors" = "Добавить сенсоры";-->





    <!--/* Monitor common settings strings */-->
    <!--"MonitorSettingsTitleNew" = "Новый монитор";-->
    <!--"MonitorSettingsTitle" = "Монитор";-->

    <!--/* Sensor settings string */-->




    <!--/* Diagram export strings */-->
    <!--"Export" = "Экспорт";-->
    <!--"Temperature diagram" = "График температуры";-->

    <!--"Temperature, ˚C" = "Температура, ˚C";-->
    <!--"Temperature, ˚F" = "Температура, ˚F";-->
    <!--"Export diagram" = "Экспорт графика";-->
    <!--"Diagram successfully exported as" = "График успешно экспортирован как";-->

    <!--/* Diagram mailing strings */-->
    <!--"Home-DC table" = "Home-DC таблица";-->
    <!--"Mailing" = "Отправка почтой";-->
    <!--"Message send failed" = "Не удалось отправить сообщение";-->

    <!--/* Other strings */-->
    <!--"Monitor" = "Монитор";-->
    <!--"Sensor" = "Сенсор";-->
    <!--"Unknown" = "Неизвестно";-->
    <!--"Settings" = "Настройка";-->

    <!--"Clear operation" = "Операция очиски";-->
    <!--"This operation will remove all records in this list" = "Эта операция удалит все записи из этого списка";-->



    <!--"None" = "Нет";-->

    <!--"SUN" = "ВС";-->
    <!--"MON" = "ПН";-->
    <!--"TUE" = "ВТ";-->
    <!--"WED" = "СР";-->
    <!--"THU" = "ЧТ";-->
    <!--"FRI" = "ПТ";-->
    <!--"SAT" = "СБ";-->

    <!--"January" = "Январь";-->
    <!--"February" = "Февраль";-->
    <!--"March" = "Март";-->
    <!--"April" = "Апрель";-->
    <!--"May" = "Май";-->
    <!--"June" = "Июнь";-->
    <!--"July" = "Июль";-->
    <!--"August" = "Август";-->
    <!--"September" = "Сентябрь";-->
    <!--"October" = "Октябрь";-->
    <!--"November" = "Ноябрь";-->
    <!--"December" = "Декабрь";-->

    <!--"Alarm" = "Тревога";-->
    <!--"Alien" = "Пришелец";-->
    <!--"Metal room" = "Металлическая комната";-->

    <!--"t, m:ss" = "t, м:сс";-->
    <!--"t, h:mm" = "t, ч:мм";-->
    <!--"t, h" = "t, ч";-->

</resources>