<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    >
<ScrollView
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">
    <!--tools:context="com.example.android.actionbarcompat.listpopupmenu.MainSettingSetting"-->

<LinearLayout
    android:id="@+id/activity_main_setting_item1"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/colorTextlight"
    android:visibility="visible"
    android:layout_weight="0"
    >
    <!--android:weightSum = "100"-->

    <!--Также можно указать атрибут android:weightSum. Если атрибуту присвоить значение 100, то -->
    <!--можно указывать вес дочерних элементов в удобном виде, как в процентах. Такой способ широко -->
    <!--используется веб-мастерами при вёрстке.-->

    <!--"Поиск"-->
    <!---->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/colorBackgroundGrey"
        android:layout_height="@dimen/iten_setting_wight"
        android:layout_marginBottom="@dimen/iten_vertical_gap_wight"
        android:layout_weight="0">

        <TextView
            android:text=""
            android:id="@+id/textViewGroupFind"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:lines="1"
            android:textColor="@color/colorTextlight"
            android:layout_marginLeft="10dp"
            android:gravity="left|bottom"
            android:textSize="@dimen/iten_text_size"
            android:paddingBottom="5dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/colorBackground"
        android:layout_height="@dimen/iten_setting_wight"
        android:layout_marginBottom="@dimen/iten_vertical_gap_wight"
        android:layout_weight="0">
        <!--TERMOMETER-->
        <TextView
            android:text="@string/sDiscover"
            android:id="@+id/textViewLabelFind"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:textColor="@color/colorText"
            android:lines="1"
            android:textSize="22sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textViewFindName"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorTextlight"
            android:textSize="@dimen/iten_text_size"
            android:textAlignment="gravity"
            android:paddingRight="5dp"
            android:lines="1"
            android:textStyle="normal|bold"
            android:gravity="right|center_vertical" />
        <TextView
            android:text="ID:"
            android:id="@+id/textViewFindLabelId"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorTextlight"
            android:textSize="@dimen/iten_text_size"
            android:textAlignment="gravity"
            android:paddingRight="0dp"
            android:lines="1"
            android:textStyle="normal|bold"
            android:gravity="right|center_vertical" />
        <TextView
            android:inputType="textAutoComplete"
            android:id="@+id/textViewFindAdress"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="100"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorTextlight"
            android:textSize="@dimen/iten_text_size"
            android:paddingRight="5dp"
            android:lines="1"
            android:textStyle="normal|bold"
        android:gravity="right|center_vertical|end"
             />
        <!--android:textAlignment="viewEnd"-->

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="7dp"
            android:background="@color/colorBackground"
            android:src="@drawable/ic_chevron_right_black_24dp"
            android:id="@+id/imageButtonFind"
            android:layout_weight="0"
            android:textAlignment="gravity"

           android:gravity="right|center_vertical"
            />
        <!--android:paddingRight="10dp"-->
        <!--app:srcCompat="@drawable/ic_chevron_right_black_24dp"-->
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/colorBackgroundGrey"
        android:layout_height="@dimen/iten_setting_wight"
        android:layout_marginBottom="@dimen/iten_vertical_gap_wight"
        android:layout_weight="0">

    <!--"ИНФОРМАЦИЯ"-->
        <TextView
            android:text="@string/sINFORMATION"
            android:id="@+id/textViewGroupInformation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:lines="1"
            android:textColor="@color/colorTextlight"
            android:layout_marginLeft="10dp"
            android:gravity="left|bottom"
            android:textSize="@dimen/iten_text_size"
            android:paddingBottom="5dp" />
    </LinearLayout>
    <!--Номер модели-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/colorBackground"
        android:layout_height="@dimen/iten_setting_wight"
        android:layout_marginBottom="@dimen/iten_vertical_gap_wight"
        android:layout_weight="0">

        <TextView
            android:text="@string/sModelNumber"
            android:id="@+id/textViewLabelModelNumber"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:textColor="@color/colorText"
            android:lines="1"
            android:textSize="@dimen/iten_text_size" />

        <TextView
            android:id="@+id/textViewModelNumber"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_weight="100"
            android:textColor="@color/colorTextlight"
            android:textSize="@dimen/iten_text_size"
            android:textAlignment="gravity"
            android:paddingRight="10dp"
            android:lines="1"
            android:textStyle="normal|bold"
            android:gravity="right|center_vertical" />
    </LinearLayout>

    <!--Серийный номер-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/colorBackground"
        android:layout_height="@dimen/iten_setting_wight"
        android:layout_marginBottom="@dimen/iten_vertical_gap_wight"
        android:layout_weight="0">

        <TextView
            android:text="@string/sSerialNumber"
            android:id="@+id/textViewLabelSerialNumber"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:textColor="@color/colorText"
            android:lines="1"
            android:textSize="@dimen/iten_text_size" />

        <TextView
            android:id="@+id/textViewSerialNumber"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_weight="100"
            android:textColor="@color/colorTextlight"
            android:textSize="@dimen/iten_text_size"
            android:textAlignment="gravity"
            android:paddingRight="10dp"
            android:lines="1"
            android:textStyle="normal|bold"
            android:gravity="right|center_vertical" />
    </LinearLayout>
    <!--Версия прошивки-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/colorBackground"
        android:layout_height="@dimen/iten_setting_wight"
        android:layout_marginBottom="@dimen/iten_vertical_gap_wight"
        android:layout_weight="0">

        <TextView
            android:text="@string/sFirmwareRevision"
            android:id="@+id/textViewLabelFirmwareRevision"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:textColor="@color/colorText"
            android:lines="1"
            android:textSize="@dimen/iten_text_size" />

        <TextView
            android:id="@+id/textViewFirmwareRevision"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_weight="100"
            android:textColor="@color/colorTextlight"
            android:textSize="@dimen/iten_text_size"
            android:textAlignment="gravity"
            android:paddingRight="10dp"
            android:lines="1"
            android:textStyle="normal|bold"
            android:gravity="right|center_vertical" />
    </LinearLayout>
    <!--Аппаратная версия-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/colorBackground"
        android:layout_height="@dimen/iten_setting_wight"
        android:layout_marginBottom="@dimen/iten_vertical_gap_wight"
        android:layout_weight="0">

        <TextView
            android:text="@string/sHardwareRevision"
            android:id="@+id/textViewLabelHardwareRevision"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:textColor="@color/colorText"
            android:lines="1"
            android:textSize="@dimen/iten_text_size" />

        <TextView
            android:id="@+id/textViewHardwareRevision"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_weight="100"
            android:textColor="@color/colorTextlight"
            android:textSize="@dimen/iten_text_size"
            android:textAlignment="gravity"
            android:paddingRight="10dp"
            android:lines="1"
            android:textStyle="normal|bold"
            android:gravity="right|center_vertical" />
    </LinearLayout>
    <!--Версия ПО-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/colorBackground"
        android:layout_height="@dimen/iten_setting_wight"
        android:layout_marginBottom="@dimen/iten_vertical_gap_wight"
        android:layout_weight="0">

        <TextView
            android:text="@string/sSoftwareRevision"
            android:id="@+id/textViewLabelSoftwareRevision"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:textColor="@color/colorText"
            android:lines="1"
            android:textSize="@dimen/iten_text_size" />

        <TextView
            android:id="@+id/textViewSoftwareRevision"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_weight="100"
            android:textColor="@color/colorTextlight"
            android:textSize="@dimen/iten_text_size"
            android:textAlignment="gravity"
            android:paddingRight="10dp"
            android:lines="1"
            android:textStyle="normal|bold"
            android:gravity="right|center_vertical" />
    </LinearLayout>

    <!--производитель-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/colorBackground"
        android:layout_height="@dimen/iten_setting_wight"
        android:layout_marginBottom="@dimen/iten_vertical_gap_wight"
        android:layout_weight="0">

        <TextView
            android:text="@string/sManufacturerName"
            android:id="@+id/textViewLabelManufacturerName"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:textColor="@color/colorText"
            android:lines="1"
            android:textSize="@dimen/iten_text_size" />

        <TextView
            android:id="@+id/textViewManufacturerName"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_weight="100"
            android:textColor="@color/colorTextlight"
            android:textSize="@dimen/iten_text_size"
            android:textAlignment="gravity"
            android:paddingRight="10dp"
            android:lines="1"
            android:textStyle="normal|bold"
            android:gravity="right|center_vertical" />
    </LinearLayout>

    <!---->
</LinearLayout>
</ScrollView>

</LinearLayout>