<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_main_min_max"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum = "100"
    android:background="@color/colorTextlight"
    android:visibility="visible"
    android:textColor="@color/colorTextlight"
    android:textSize="@dimen/iten_text_size"
    >
    <!--android:background="@color/colorTextlight"-->
     <!--ОТСТУПЫ - НЕ работает!? почемуто, хотел добапввить разделители-->
    <!--android:divider="@color/colorAccent"-->
    <!--android:dividerPadding="15dp"-->
    <!--android:showDividers="beginning|middle|end">-->
    <!---->

    <!--Также можно указать атрибут android:weightSum. Если атрибуту присвоить значение 100, то -->
    <!--можно указывать вес дочерних элементов в удобном виде, как в процентах. Такой способ широко -->
    <!--используется веб-мастерами при вёрстке.-->

    <!--"Поиск"-->
    <!---->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/iten_setting_wight"
        android:layout_marginBottom="@dimen/iten_vertical_gap_wight"
        android:background="@color/colorBackground">

        <TextView
            android:text=""
            android:id="@+id/textViewGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_marginLeft="10dp"
            android:gravity="left|bottom"
            android:paddingBottom="5dp" />
    </LinearLayout>

    <!--ЗВУК / вибрация, ВКЛ/выкл-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/iten_setting_wight"
        android:layout_marginBottom="@dimen/iten_vertical_gap_wight"
        android:background="@color/colorBackground">

        <TextView
            android:text="@string/sNotification"
            android:id="@+id/textViewLabelNotification"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:lines="1"
            android:textColor="@color/colorTextlight"
            android:textSize="@dimen/iten_text_size"
             />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10" />

        <!--<Switch-->
            <!--android:id="@+id/switchNotification"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="0"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:layout_gravity="right|center_vertical"-->
            <!--android:switchTextAppearance="@style/TextAppearance.AppCompat" />-->
        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/switchNotification"
            style="@style/SwitchButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:kswAnimationDuration="300"
            app:kswBackDrawable="@drawable/ios_back_drawable"
            app:kswBackMeasureRatio="1.6"
            app:kswThumbDrawable="@drawable/ios_thumb_selector"
            app:kswThumbMarginBottom="-8dp"
            app:kswThumbMarginLeft="-5dp"
            app:kswThumbMarginRight="-5dp"
            app:kswThumbMarginTop="-2.5dp"
            android:layout_weight="0"

            android:layout_marginRight="3dp"/>

    </LinearLayout>

    <!--Значение-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/iten_setting_wight"
        android:layout_marginBottom="@dimen/iten_vertical_gap_wight"
        android:background="@color/colorBackground">

        <TextView
            android:text="@string/sValue"
            android:id="@+id/textViewLabelValue"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:lines="1"
            android:textColor="@color/colorTextlight"
            android:textSize="@dimen/iten_text_size"/>

        <TextView
              android:id="@+id/textViewValue"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="100"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:paddingRight="5dp"
            android:lines="1"
            android:textStyle="normal|bold"
            android:gravity="right|center_vertical|end"
            android:textColor="@color/colorText"
            android:textSize="@dimen/iten_text_size"
            />

        <ImageButton
            android:id="@+id/imageButtonValue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="7dp"
            android:src="@drawable/ic_chevron_right_black_24dp"
            android:layout_weight="0"
            android:textAlignment="gravity"
            android:gravity="right|center_vertical"
            android:background="@color/colorBackground"
            />
        <!--android:paddingRight="10dp"-->
        <!--app:srcCompat="@drawable/ic_chevron_right_black_24dp"-->
    </LinearLayout>
    <!--Мелодия-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/iten_setting_wight"
        android:layout_marginBottom="@dimen/iten_vertical_gap_wight"
        android:background="@color/colorBackground">

        <TextView
            android:text="@string/sMelody"
            android:id="@+id/textViewLabelMelody"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:lines="1"
            android:textColor="@color/colorTextlight"
            android:textSize="@dimen/iten_text_size"/>
        <!--android:inputType="textAutoComplete"-->
        <TextView
            android:text="..."
            android:id="@+id/textViewMelody"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="100"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:paddingRight="5dp"
            android:lines="1"
            android:textStyle="normal|bold"
            android:gravity="right|center_vertical|end"
            android:textColor="@color/colorText"
            android:textSize="@dimen/iten_text_size"
            />
        <!--android:textAlignment="viewEnd"-->

        <ImageButton
            android:id="@+id/imageButtonMelody"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="7dp"
            android:src="@drawable/ic_chevron_right_black_24dp"
            android:layout_weight="0"
            android:textAlignment="gravity"
            android:background="@color/colorBackground"
            android:gravity="right|center_vertical"
            />
        <!--android:paddingRight="10dp"-->
        <!--app:srcCompat="@drawable/ic_chevron_right_black_24dp"-->
    </LinearLayout>
    <!--Серийный номер-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/iten_setting_wight"
        android:layout_marginBottom="@dimen/iten_vertical_gap_wight"
        android:background="@color/colorBackground">

        <TextView
            android:text="@string/sVibration"
            android:id="@+id/textViewLabelVibration"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:lines="1"
            android:textColor="@color/colorTextlight"
            android:textSize="@dimen/iten_text_size"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10" />

        <!--<Switch-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/switchVibration"-->
            <!--android:layout_weight="0"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:layout_gravity="right|center_vertical"-->
            <!--android:switchTextAppearance="@style/TextAppearance.AppCompat" />-->

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/switchVibration"
            style="@style/SwitchButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:kswAnimationDuration="300"
            app:kswBackDrawable="@drawable/ios_back_drawable"
            app:kswBackMeasureRatio="1.6"
            app:kswThumbDrawable="@drawable/ios_thumb_selector"
            app:kswThumbMarginBottom="-8dp"
            app:kswThumbMarginLeft="-5dp"
            app:kswThumbMarginRight="-5dp"
            app:kswThumbMarginTop="-2.5dp"
            android:layout_weight="0"

            android:layout_marginRight="3dp"/>

    </LinearLayout>
    <!--Версия прошивки-->
    <!--Аппаратная версия-->
    <!--Версия ПО-->

</LinearLayout>